# disk-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
disk_viewer/: app.py
